--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,77 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  //  include: 指定要包含在编译中的文件
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "types/**/*.d.ts",
+    "types/**/*.ts",
+    "vite.config.ts",
+    ".*.cjs",
+    "index.html",
+    "*.config.cjs",
+    "*.config.mjs"
+  ],
+  // exclude: 指定要从编译中排除的文件
+  "exclude": ["node_modules", "dist", "index.html", "src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
-    "baseUrl": ".",
+    "target": "ESNext", // 指定ECMAScript目标版本
+    "useDefineForClassFields": true, // 是否校验TypeScript数据类型
+    "module": "ESNext", // 生成代码的模板标准
+    "lib": ["ESNext", "DOM", "DOM.Iterable", "scripthost", "WebWorker"], // 指定要包含在编译中的库文件
+    "skipLibCheck": true, // 跳过对声明文件的检查
+
+    /* Bundler mode */
+    "moduleResolution": "node", // 指定模块解析策略 bundler node
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true, // 允许导入.json文件
+    "isolatedModules": true, // 仅对每个文件进行一次转换
+    "noEmit": true, // 不生成输出文件
+    "jsx": "preserve", // 指定JSX代码生成
+
+    /* Linting */
+    "strict": true, // 启用所有严格类型检查选项
+    "esModuleInterop": true, // 允许从CommonJS模块导入默认导出
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "sourceMap": true, // 生成相应的.map文件
+    "types": ["vite/client"], // 要包含的类型声明文件名列表
+    "baseUrl": "./", // 解析非相对模块的基地址，默认是当前目录
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      // 路径别名 @ #
+      "@/*": ["src/*"],
+      "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"],
+      "#/*": ["types/*"]
+    },
+    "plugins": [
+      //配置 unplugin-auto-import 和 unplugin-vue-components
+      {
+        "name": "unplugin-auto-import",
+        "options": {
+          "imports": ["element-plus", "vue", "vue-router", "pinia", "echarts"],
+          "dts": "auto-imports.d.ts"
+        }
+      },
+      {
+        "name": "unplugin-vue-components",
+        "options": {
+          "dts": "components.d.ts",
+          "include": ["**/*.vue", "**/*.md"],
+          "resolvers": ["element-plus", "pinia", "vue", "vue-router", "echarts"]
+        }
+      }
+    ],
+    "typeRoots": [
+      "node_modules/@types", // 默认值
+      "types"
+    ] // 声明文件目录，默认时node_modules/@types
   }
 }
