--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,7 +13,8 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "types": ["node"]
   }
 }
